tdf#158072 Fails to apply AutoFilter in Mail Merge dialog

regression from
    commit 66b0bc55854ba13b92b6c39b95f3f2d4ef76bf20
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Mar 10 10:35:33 2023 +0200
    simplify initialisation in *DatabaseMetaData
where I failed to notice that the supposedly static data was being
std::move'd

Change-Id: I6238fa8e20ee6ca9fe31c29a7e05262dc1e3bede
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159851
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>